# clevo-indicator

./: .gitignore  CMakeLists.txt  README.md
src/: clevo-indicator.cpp
